Add installer scripts, icons, and bump version
Introduce native installer tooling and UI/packaging improvements.

- Add create-installer scripts for Windows (create-installer.bat), PowerShell improvements, and a new create-installer.sh for Linux; remove many older bundle/launcher helper scripts.
- Add application icons (icon.ico, icon.png) and remove old icon.jpg.
- Bump project version to 0.9.2 in pom.xml and update packaging output name and embedded Windows versionInfo/icon metadata.
- Rename bundled launcher JAR path in build output and adjust related packaging/outfile settings.
- Enhance GitHubUpdater: use asset name, save downloaded file with original name, detect installer vs portable executables (run installer directly) and target replacement name now mialulauncher.exe; improve process spawning for Windows commands.
- Update LauncherFrame UI: set app icon, enforce EXIT_ON_CLOSE, change title to "MIALU LAUNCHER", add an "Abrir ubicacion" button to open instance folders, add an "UPDATE" action to trigger GitHubUpdater, and other minor UI refinements.
- Fix README command reference (launcher_mialu.exe).

These changes consolidate installer generation, improve updater behavior for installer vs portable assets, refresh UI/branding, and prepare builds for release 0.9.2.